Removed menu, added ImagePath condition and changed css for review checkbox area

--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -51,7 +51,7 @@
     @Html.HiddenFor(m => m.NavDirection)
     <fieldset>
         <legend>Question</legend>
-        @if (Model.ImagePath != null)
+        @if (Model.ImagePath != null && !Model.ImagePath.Equals(""))
         {
             <div class="image-container">
                 <img src="~/Content/Images/@Model.ImagePath" alt="" />
