--- a/APFTestingUI/Content/Site.css
+++ b/APFTestingUI/Content/Site.css
@@ -259,7 +259,7 @@ body
     text-align:center;
     font-family: 'Ubuntu', sans-serif;
     background-color: #303030;
-    color: #ffffff;
+    color: #eeeeee;
     height: 100%;
 }
 
@@ -479,7 +479,7 @@ input[type="radio"], input[type="checkbox"]
 
     #content .size-wrapper
     {
-        padding: 50px 10px 50px;
+        padding: 75px 10px 50px;
         max-width: 980px;
     }
 
@@ -730,7 +730,8 @@ a.button
 }
 
 #mark-for-review {
-    display:block;
+    /*display:block;*/
+    padding-left: 124px;
     line-height: 2.5em;
 }
 
