--- a/APFTestingUI/Views/Exam/ReviewQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/ReviewQuestion.cshtml
@@ -38,7 +38,7 @@
             </div>
         }
     </fieldset>
-    <div id="navigation-container">
+    <div id="navigation-container" class="review-page">
         <span id="mark-for-review">
             @Html.LabelFor(model => model.IsMarkedForReview)
             @Html.CheckBoxFor(model => model.IsMarkedForReview)
