--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -50,6 +50,13 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Suburb)
     </div>
+    
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.State)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.State)
+    </div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Postcode)
