--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -72,6 +72,15 @@
             @*@Html.ValidationMessageFor(model => model.Suburb)*@
         </div>
         <div class="clear"></div>
+        
+        <div class="editor-label">
+            @Html.LabelFor(model => model.State) <em>*</em>
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.State)
+            @*@Html.ValidationMessageFor(model => model.State)*@
+        </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Postcode) <em>*</em>
