--- a/APFTestingUI/Views/Candidate/EditPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPilot.cshtml
@@ -65,6 +65,14 @@
             @Html.EditorFor(model => model.Suburb)
             @*@Html.ValidationMessageFor(model => model.Suburb)*@
         </div>
+        
+         <div class="editor-label">
+            @Html.LabelFor(model => model.State) <em>*</em>
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.State)
+            @*@Html.ValidationMessageFor(model => model.State)*@
+        </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Postcode) <em>*</em>
