Custom background added for MarkForReview checkbox

--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -85,8 +85,10 @@
 
             <input id="SummaryButton" class="button @SummaryHidden" name="NavButton" type="submit" value="Go to Summary" />
             <span id="mark-for-review">
-            @Html.LabelFor(model => model.IsMarkedForReview)
-            @Html.CheckBoxFor(model => model.IsMarkedForReview)
+                @*@Html.CheckBoxFor(model => model.IsMarkedForReview)*@
+                <input type="checkbox" value="true" name="IsMarkedForReview" id="IsMarkedForReview" />
+                @Html.LabelFor(model => model.IsMarkedForReview, new { @class="label-mark-for-review" })
+                <input type="hidden" value="false" name="IsMarkedForReview" />
             </span>
         }
 
