--- a/APFTestingUI/Content/Site.css
+++ b/APFTestingUI/Content/Site.css
@@ -1141,7 +1141,6 @@ a.button-add {
 
 input[type="checkbox"] + .label-checkbox {
     background: transparent url('../Images/sprite-input-buttons2.png') 0 0 no-repeat;
-    padding-left: 40px;
     margin: 0;
     padding:9px 0 9px 40px;
     display:block;
@@ -1149,6 +1148,23 @@ input[type="checkbox"] + .label-checkbox {
 
 input[type="checkbox"]:checked + .label-checkbox {
     background: transparent url('../Images/sprite-input-buttons2.png') 0 -198px no-repeat;
+}
+
+#IsMarkedForReview
+{
+    display:none;
+}
+
+input[type="checkbox"] + .label-mark-for-review
+{
+    background: transparent url('../Images/sprite-input-buttons2.png') 100% 0 no-repeat;
+    margin: 0;
+    padding:9px 40px 9px 0;
+}
+
+input[type="checkbox"]:checked + .label-mark-for-review
+{
+    background-position:100% -198px;
 }
 
 
