--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -9,6 +9,7 @@
 <h3>Welcome to the Examiner home page!</h3>
 </hgroup>
 
+<p class="add-candidates-container">
 @if (Model.PilotAuthorised)
 {
     @Html.ActionLink("Add Pilot Candidate", "CreatePilot", "Candidate", new { }, new { @class="button-add" })
@@ -18,6 +19,7 @@
 {
     @Html.ActionLink("Add Packer Candidate", "CreatePacker", "Candidate", new { }, new { @class="button-add" })
 }
+</p>
 
 
 <hr />
