--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -77,7 +77,7 @@
             @Html.LabelFor(model => model.State) <em>*</em>
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.State)
+            @Html.DropDownListFor(model => model.State, Model.States, "--Select--")
             @*@Html.ValidationMessageFor(model => model.State)*@
         </div>
         <div class="clear"></div>
