--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -15,6 +15,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.FirstName)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.LastName)
@@ -22,6 +23,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.LastName)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.DateOfBirth)
@@ -29,6 +31,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.DateOfBirth)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Address1)
@@ -36,6 +39,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Address1)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Address2)
@@ -43,6 +47,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Address2)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Suburb)
@@ -50,6 +55,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Suburb)
     </div>
+    <div class="clear"></div>
     
     <div class="display-label">
          @Html.DisplayNameFor(model => model.State)
@@ -57,6 +63,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.State)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Postcode)
@@ -64,6 +71,8 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Postcode)
     </div>
+    <div class="clear"></div>
+
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.ARN)
@@ -71,6 +80,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.ARN)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Phone)
@@ -78,6 +88,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Phone)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Mobile)
@@ -85,6 +96,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Mobile)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Email)
@@ -92,6 +104,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Email)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.PilotLicenceType)
@@ -99,6 +112,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.PilotLicenceType)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.InstrumentRating)
@@ -106,6 +120,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.InstrumentRating)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.PilotMedical)
@@ -113,6 +128,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.PilotMedical)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.PilotMedicalExpiry)
@@ -120,6 +136,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.PilotMedicalExpiry)
     </div>
+    <div class="clear"></div>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.ValidBFR)
@@ -127,6 +144,7 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.ValidBFR)
     </div>
+    <div class="clear"></div>
 </fieldset>
 <p class="button-container">
     @Html.ActionLink("Edit", "EditPilot", new { candidateId = Model.Id }, new { @class="button-submit" })
