--- a/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
+++ b/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
@@ -16,7 +16,7 @@
     <![endif]-->
     @Scripts.Render("~/Scripts/modernizr.custom.51211.js")
 </head>
-<body>
+<body class="in-exam">
     <div id="global-wrapper">
         <header id="header">
             <div class="size-wrapper">
