added result button to examiner index page

--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -32,6 +32,7 @@
             <tr>
                 <th>Name</th>
                 <th>Theory Exam</th>
+                <th>View Result</th>
                 <th colspan="2">Practical Exam</th>
             </tr>
         </thead>
@@ -58,17 +59,16 @@
                             @Html.ActionLink("Retake Exam", "Start", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id }, new { @class = "examinerButton" })
                         }
                     </td>
-                    <td class="input-practical-link">
-                        @if (candidate.PracticalAvailable)
+                    <td class="view-results-link">
+                        @if (candidate.TheoryPassed || candidate.TheoryComponentFailed)
                         {
-                            if (candidate.ExamType.Equals("PilotExam"))
-                            {
-                                @Html.ActionLink("Input Practical Results", "PilotInput", "Practical", new { examId = candidate.LatestExamId, candidateId = candidate.Id }, new { @class = "examinerButton" })
-                            }
-                            else if (candidate.ExamType.Equals("PackerExam"))
-                            {
-                                @Html.ActionLink("Input Practical Results", "PackerView", "Practical", new { examId = candidate.LatestExamId }, new { @class = "examinerButton" })
-                            }
+                            @Html.ActionLink("View Results", "Result", "Exam", new { examId = candidate.LatestExamId }, new { @class = "examinerButton" })
+                        }
+                    </td>
+                    <td class="input-practical-link">
+                        @if (candidate.TheoryPassed)
+                        {
+                            @Html.ActionLink("Input Practical Results", "PilotInput", "Practical", new { examId = candidate.LatestExamId, candidateId = candidate.Id }, new { @class = "examinerButton" })
                         }
                     
                     </td>
@@ -89,6 +89,7 @@
             <tr>
                 <th>Name</th>
                 <th>Theory Exam</th>
+                <th>View Result</th>
                 <th colspan="2">Practical Exam</th>
             </tr>
         </thead>
@@ -115,20 +116,19 @@
                             @Html.ActionLink("Retake Exam", "Start", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id }, new { @class = "examinerButton" })
                         }
                     </td>
-                    <td class="input-practical-link">
-                        @if (candidate.PracticalAvailable)
+                    <td class="view-results-link">
+                        @if (candidate.TheoryPassed || candidate.TheoryComponentFailed)
                         {
-                            if (candidate.ExamType.Equals("PilotExam"))
-                            {
-                                @Html.ActionLink("Input Practical Results", "PilotInput", "Practical", new { examId = candidate.LatestExamId, candidateId = candidate.Id }, new { @class = "examinerButton" })
-                            }
-                            else if (candidate.ExamType.Equals("PackerExam"))
-                            {
-                                @Html.ActionLink("Input Practical Results", "PackerView", "Practical", new { examId = candidate.LatestExamId }, new { @class = "examinerButton" })
-                            }
+                            @Html.ActionLink("View Results", "Result", "Exam", new { examId = candidate.LatestExamId }, new { @class = "examinerButton" })
                         }
-                    
                     </td>
+                    <td class="input-practical-link">
+                        @if (candidate.TheoryPassed)
+                        {
+                            @Html.ActionLink("Input Practical Results", "PackerView", "Practical", new { examId = candidate.LatestExamId }, new { @class = "examinerButton" })
+                        }
+                    </td>
+                    
                     <td class="reset-cell">@Html.ActionLink("Reset exam", "Reset", "Reset", new { examId = candidate.LatestExamId }, new { @class = "examinerButton reset" })</td>
                 </tr>
             }
