--- a/APFTestingUI/Views/Candidate/EditPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPilot.cshtml
@@ -12,10 +12,11 @@
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(false)
-
+    var isCheckedTrue = @Model.InstrumentRating ? "Checked" : "";
+    var isCheckedFalse = @Model.InstrumentRating ? "" : "Checked";
     <fieldset>
         <legend>Create</legend>
-
+        @Html.HiddenFor(model => model.Id)
         <div class="editor-label">
             @Html.LabelFor(model => model.FirstName) <em>*</em>
         </div>
@@ -23,6 +24,7 @@
             @Html.EditorFor(model => model.FirstName)
             @*@Html.ValidationMessageFor(model => model.FirstName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.LastName) <em>*</em>
@@ -31,6 +33,7 @@
             @Html.EditorFor(model => model.LastName)
             @*@Html.ValidationMessageFor(model => model.LastName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.DateOfBirth) <em>*</em>
@@ -41,6 +44,7 @@
             <br />
             <small>Format: (dd/mm/yyyy)</small>
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Address1) <em>*</em>
@@ -49,6 +53,7 @@
             @Html.EditorFor(model => model.Address1)
             @*@Html.ValidationMessageFor(model => model.Address1)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Address2)
@@ -57,6 +62,7 @@
             @Html.EditorFor(model => model.Address2)
             @*@Html.ValidationMessageFor(model => model.Address2)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Suburb) <em>*</em>
@@ -65,6 +71,7 @@
             @Html.EditorFor(model => model.Suburb)
             @*@Html.ValidationMessageFor(model => model.Suburb)*@
         </div>
+        <div class="clear"></div>
         
          <div class="editor-label">
             @Html.LabelFor(model => model.State) <em>*</em>
@@ -73,6 +80,7 @@
             @Html.EditorFor(model => model.State)
             @*@Html.ValidationMessageFor(model => model.State)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Postcode) <em>*</em>
@@ -81,6 +89,7 @@
             @Html.EditorFor(model => model.Postcode)
             @*@Html.ValidationMessageFor(model => model.Postcode)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.ARN) <em>*</em>
@@ -89,6 +98,7 @@
             @Html.EditorFor(model => model.ARN)
             @*@Html.ValidationMessageFor(model => model.ARN)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Phone)
@@ -97,6 +107,7 @@
             @Html.EditorFor(model => model.Phone)
             @*@Html.ValidationMessageFor(model => model.Phone)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Mobile)
@@ -105,6 +116,7 @@
             @Html.EditorFor(model => model.Mobile)
             @*@Html.ValidationMessageFor(model => model.Mobile)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Email) <em>*</em>
@@ -113,6 +125,7 @@
             @Html.EditorFor(model => model.Email)
             @*@Html.ValidationMessageFor(model => model.Email)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.PilotLicenceType) <em>*</em>
@@ -121,6 +134,7 @@
             @Html.DropDownListFor(model => model.PilotLicenceType, Model.PilotLicences, "--Select--")
             @*@Html.ValidationMessageFor(model => model.PilotLicenceType)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.InstrumentRating) <em>*</em>
@@ -130,15 +144,17 @@
             @Html.RadioButtonFor(model => model.InstrumentRating, false, new { id = "instrument-rating-false" }) <label for="instrument-rating-false">No</label>
             @*@Html.ValidationMessageFor(model => model.InstrumentRating)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.PilotMedical) <em>*</em>
         </div>
         <div class="editor-field">
-            @Html.RadioButtonFor(model => model.PilotMedical, 1, new { id = "pilot-medical-class-1" }) <label for="pilot-medical-class-1">Class One</label><br />
-            @Html.RadioButtonFor(model => model.PilotMedical, 2, new { id = "pilot-medical-class-2" }) <label for="pilot-medical-class-2">Class Two</label>
+            @Html.RadioButtonFor(model => model.PilotMedical, "ClassOne", new { id = "pilot-medical-class-1" }) <label for="pilot-medical-class-1">Class One</label><br />
+            @Html.RadioButtonFor(model => model.PilotMedical, "ClassTwo", new { id = "pilot-medical-class-2" }) <label for="pilot-medical-class-2">Class Two</label>
             @*@Html.ValidationMessageFor(model => model.PilotMedical)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.PilotMedicalExpiry) <em>*</em>
@@ -149,6 +165,7 @@
             <br />
             <small>Format: (dd/mm/yyyy)</small>
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.ValidBFR) <em>*</em>
@@ -157,6 +174,7 @@
             @Html.CheckBoxFor(model => model.ValidBFR)
             @*@Html.ValidationMessageFor(model => model.ValidBFR)*@
         </div>
+        <div class="clear"></div>
 
         <p class="button-container">
             <input type="submit" value="Save" class="button-submit" />
